--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.10.6"
+    "@types/node": "^20.10.6",
+    "pm2": "^5.3.0"
   }
 }
