--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "keygrip": "^1.1.0",
     "redis": "^4.6.12"
   },
   "devDependencies": {
